--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,11 +3,18 @@
 
 :root {
   --primary: #fe2c55;
+  --black: #000;
+  --text-color: #333;
+
+  --default-layout-header-height: 60px;
+  --default-layout-width: 1150px;
 }
 
 header {
 }
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -20,4 +27,15 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  color: var(--text-color);
+}
+button,
+input,
+[tabindex] {
+  border: none;
+  outline: none;
+}
+a[href] {
+  color: var(--text-color);
+  text-decoration: none;
 }
