--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,7 +7,8 @@
   --text-color: #333;
 
   --default-layout-header-height: 60px;
-  --default-layout-width: 1150px;
+  --default-layout-width: 1318px;
+  --default-layout-header-width: 1358px;
 }
 
 header {
