--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,14 +1,16 @@
 .wrapper {
+  display: flex;
+  align-items: center;
   --search-border-radius: 92px;
   --search-height: 46px;
   --search-top-spacer: 9px;
   --search-bottom-width: 52px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
   height: var(--default-layout-header-height);
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  width: var(--default-layout-header-width);
+  padding: 0px 24px 0px 16px;
 }
+
 .inner {
   height: 100%;
   width: var(--default-layout-width);
@@ -18,6 +20,10 @@
 }
 
 .logo {
+  min-width: 300px;
+  height: 42px;
+  display: flex;
+  align-items: center;
 }
 
 .search {
@@ -55,7 +61,15 @@
     border-color: rgba(22, 24, 35, 0.2);
   }
 }
+.search-item-1 {
+  padding: 5px 12px 3px;
+}
 
+.search-result {
+  width: 500px;
+
+  padding-top: 8px;
+}
 .clear,
 .loading {
   position: absolute;
@@ -77,6 +91,49 @@
     cursor: pointer;
   }
 }
-
 .action {
+  display: flex;
+  align-items: center;
+  min-width: 272px;
+}
+
+.upload-btn {
+  display: flex;
+  align-items: center;
+  padding: 0px 16px;
+  min-width: 110px;
+  height: 36px;
+  border: 1px solid rgba(22, 24, 35, 0.12);
+  border-radius: 2px;
+  background: rgba(255, 255, 255, 1);
+  justify-content: center;
+}
+
+.upload-icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 8px;
+}
+
+.upload-span-text {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.login-btn {
+  align-items: center;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "IBM Plex Sans", TikTokFont, Arial, Tahoma, PingFangSC,
+    sans-serif;
+  background-color: rgba(254, 44, 85, 1);
+  color: rgba(255, 255, 255, 1);
+  border-radius: 4px;
+  min-height: 36px;
+  min-width: 100px;
+  margin-left: 16px;
+  padding: 6px 8px;
 }
